--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
-  site_title: Journal
-  site_tagline: A stunning personal blog Jekyll theme with an image-focused design.
+  site_title: Emmanuel Portelli
+  site_tagline: This is my personal space where I explore Data Science projects.
   favicon_image: /images/favicon.png
 
 header_settings:
