--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -54,7 +54,7 @@ social_settings:
   soundcloud_url: ''
   spotify_url: ''
   bandcamp_url: ''
-  linkedin_url: 'linkedin.com/in/emmanuel-portelli-57105848'
+  linkedin_url: 'https://linkedin.com/in/emmanuel-portelli-57105848'
 
 color_settings:
   background_color: '#ffffff'
